unpackaged/main/default/objects/ERS_Account_Product__mdt/ERS_Account_Product__mdt.object-meta.xml
<CustomObject>
    <label>ERS Account Product</label>
    <pluralLabel>Products</pluralLabel>
</CustomObject>