unpackaged/main/default/objects/ERS_Account_Product__mdt/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RAP</fullName>
                <default>true</default>
                <label>RAP</label>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>