unpackaged/main/default/objects/ERS_Account_Product__mdt/fields/Department_ID__c.field-meta.xml
<CustomField>
    <fullName>Department_ID__c</fullName>
    <label>Department ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COL015</fullName>
                <default>true</default>
                <label>COL015</label>
            </value>
            <value>
                <fullName>COL016</fullName>
            </value>
            <value>
                <fullName>COL024</fullName>
            </value>
            <value>
                <fullName>COL017</fullName>
            </value>
            <value>
                <fullName>COL025</fullName>
            </value>
            <value>
                <fullName>COL022</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>