unpackaged/main/default/objects/ERS_Account_Product__mdt/fields/Payment_Category_Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>Payment_Category_Membership_Level__c</fullName>
    <label>Payment Category/Membership Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PLUS RV</fullName>
                <default>true</default>
                <label>PLUS RV</label>
            </value>
            <value>
                <fullName>PREMIER RV</fullName>
            </value>
            <value>
                <fullName>BASIC</fullName>
            </value>
            <value>
                <fullName>PLUS</fullName>
            </value>
            <value>
                <fullName>CARRENT</fullName>
            </value>
            <value>
                <fullName>HOMELOCK</fullName>
            </value>
            <value>
                <fullName>MOTO</fullName>
            </value>
            <value>
                <fullName>PREMIER</fullName>
            </value>
            <value>
                <fullName>RV</fullName>
            </value>
            <value>
                <fullName>TMAACG</fullName>
            </value>
            <value>
                <fullName>TMACONTR</fullName>
            </value>
            <value>
                <fullName>TMAFLEET</fullName>
            </value>
            <value>
                <fullName>TMSAAR</fullName>
            </value>
            <value>
                <fullName>TMSBATTA</fullName>
            </value>
            <value>
                <fullName>TMSBATTC</fullName>
            </value>
            <value>
                <fullName>TMSBATTF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>