unpackaged/main/default/objects/ERS_Account_Product__mdt/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product Id</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1403</fullName>
                <default>true</default>
                <label>1403</label>
            </value>
            <value>
                <fullName>1404</fullName>
            </value>
            <value>
                <fullName>1405</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>